Commented the code to store text chunk

--- a/trials.ipynb
+++ b/trials.ipynb
@@ -202,8 +202,8 @@
     "\n",
     "index_name=\"medical-chatbot\"\n",
     "\n",
-    "#Creating Embeddings for Each of The Text Chunks & storing\n",
-    "docsearch=Pinecone.from_texts([t.page_content for t in text_chunks], embeddings, index_name=index_name)"
+    "# #Creating Embeddings for Each of The Text Chunks & storing\n",
+    "# docsearch=Pinecone.from_texts([t.page_content for t in text_chunks], embeddings, index_name=index_name)"
    ]
   },
   {
